[package]
name = "chat"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
actix = "0.7.4"

rand = "0.3"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio = "0.1.11"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

